--- a/start.html
+++ b/start.html
@@ -10,5 +10,8 @@
     <h1>This is a not index.html github repo</h1>
     <img src="food.jpg" alt="">
     <p>aj saradin ta karaper modde diya geleo i think will be better in my future life </p>
+
+<h2>ami ki kunu kichu vul kortaci </h2>
+
 </body>
 </html>
