--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
     <img src="food.jpg" alt="">
     <p>aj saradin ta karaper modde diya geleo i think will be better in my future life </p>
 
-<h2>ami ki kunu kichu vul kortaci </h2>
+<h2 style="color:red;">ami ki kunu kichu vul kortaci </h2>
 
 </body>
 </html>
