--- a/start.html
+++ b/start.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is a not index.html github repo</h1>
     <img src="food.jpg" alt="">
+    <strong>akdin vat na kaile mori jay na kew</strong>
 </body>
 </html>
